fix data for RIO

--- a/courses/8fca6e9e-4eb6-43da-9e78-4e1fad29abf0/offerings.html
+++ b/courses/8fca6e9e-4eb6-43da-9e78-4e1fad29abf0/offerings.html
@@ -22,6 +22,7 @@
       ],
       "teachingLanguage": "nld",
       "modeOfDelivery": [
+        "situated",
         "distance-learning"
       ],
       "enrollStartDate": "1994-09-05",
