Parent eduspec is a program

--- a/programs/49ca7998-74b1-f44a-1ec1-000000000002/offerings.html
+++ b/programs/49ca7998-74b1-f44a-1ec1-000000000002/offerings.html
@@ -10,7 +10,12 @@
         "code": "60740"
       },
       "maxNumberStudents": 112,
-      "enrollEndDate": "2023-12-31",
+      "startDate": "2018-02-05",
+      "enrollStartDate": "2019-01-01",
+      "enrollEndDate": "2020-12-31",
+      "flexibleEntryPeriodStart": "2018-02-05",
+      "flexibleEntryPeriodEnd": "2021-08-31",
+      "endDate": "2021-08-31",
       "name": [
         {
           "language": "en-GB",
@@ -63,7 +68,6 @@
       "minNumberStudents": 3,
       "offeringId": "c270d617-1963-91ea-ffb2-dfb7dd98cbab",
       "resultExpected": false,
-      "flexibleEntryPeriodStart": "2018-02-05",
       "resultValueType": "1-10",
       "modeOfDelivery": [
         "distance-learning",
@@ -89,102 +93,7 @@
         }
       ],
       "teachingLanguage": "eng",
-      "enrollStartDate": "2023-01-01",
-      "endDate": "2028-08-31",
-      "academicSession": "8f154e5e-2196-99ed-6f71-240c57b6323a",
-      "startDate": "2018-02-05",
-      "flexibleEntryPeriodEnd": "2028-08-31"
-    },
-    {
-      "program": "49ca7998-74b1-f44a-1ec1-dd6eb40aeb44",
-      "offeringType": "program",
-      "primaryCode": {
-        "codeType": "offeringIdentifier",
-        "code": "60740"
-      },
-      "maxNumberStudents": 156,
-      "enrollEndDate": "2023-12-31",
-      "name": [
-        {
-          "language": "en-GB",
-          "value": "EN TRANSLATION: Talenonderwijs en Communicatie - periode 2"
-        },
-        {
-          "language": "nl-NL",
-          "value": "NL VERTALING: Talenonderwijs en Communicatie - periode 2"
-        }
-      ],
-      "description": [
-        {
-          "language": "en-GB",
-          "value": "EN TRANSLATION: The excursion is part of the MSc MADE programme, students will learn about the chemistry of the course. If possible, a visit of one week. More recently attention is paid to: 1. In less developed countries, livestock production should not only the 'end' of the course by contacting the course coordinator prior to registration.The innovator's course enables students to appreciate the relevance of our course)."
-        },
-        {
-          "language": "nl-NL",
-          "value": "NL VERTALING: The excursion is part of the MSc MADE programme, students will learn about the chemistry of the course. If possible, a visit of one week. More recently attention is paid to: 1. In less developed countries, livestock production should not only the 'end' of the course by contacting the course coordinator prior to registration.The innovator's course enables students to appreciate the relevance of our course)."
-        }
-      ],
-      "_enrollEndDate": "2021-01-31",
-      "link": "https://universiteit-van-morra.nl/programs/c5f7d22d-abf0-1fee-4ac7-9f2eb8a0fbd8",
-      "otherCodes": [
-        {
-          "codeType": "offeringIdentifier",
-          "code": "60740"
-        }
-      ],
-      "consumers": [
-        {
-          "alliances": [
-            {
-              "enrollStartTime": "9:00:00",
-              "enrollEndTime": "11:00:00",
-              "name": "lde",
-              "enrollmentUrl": "https://www.eigen-inschrijf-url.nl/schrijf-hier-in"
-            }
-          ],
-          "consumerKey": "eduxchange"
-        },
-        {
-          "consumerKey": "rio",
-          "requiredPermissionRegistration": "no",
-          "registrationStatus": "closed"
-        }
-      ],
-      "enrolledNumberStudents": 124,
-      "organization": "6fd6c513-5a3c-cac7-99a4-d73001b99497",
-      "minNumberStudents": 2,
-      "offeringId": "c5f7d22d-abf0-1fee-4ac7-9f2eb8a0fbd8",
-      "resultExpected": false,
-      "flexibleEntryPeriodStart": "2000-02-07",
-      "resultValueType": "0-100",
-      "modeOfDelivery": [
-        "situated",
-        "online",
-        "distance-learning"
-      ],
-      "abbreviation": "TEC",
-      "pendingNumberStudents": 6,
-      "addresses": [
-        {
-          "countryCode": "NL",
-          "city": "Morra",
-          "geoLocation": {
-            "longitude": 88,
-            "latitude": 0
-          },
-          "addressType": "teaching",
-          "streetNumber": 23,
-          "postalCode": "4184QU",
-          "street": "Tollenslaan",
-          "additional": "a"
-        }
-      ],
-      "teachingLanguage": "nld",
-      "enrollStartDate": "2023-01-01",
-      "endDate": "2021-01-31",
-      "academicSession": "37c2ce74-d1bf-223f-e688-5fea58376826",
-      "startDate": "2000-02-07",
-      "flexibleEntryPeriodEnd": "2021-01-31"
+      "academicSession": "8f154e5e-2196-99ed-6f71-240c57b6323a"
     }
   ],
   "hasPreviousPage": false,
